--- a/index.html
+++ b/index.html
@@ -8,28 +8,29 @@
   <style>
     html, body { height: 100%; margin: 0; }
     body {
-      background: #0b0f14; /* dark */
+      background: #0b0f14;
       color: #fff;
       font-family: Inter, system-ui, -apple-system, Segoe UI, Roboto, Arial, sans-serif;
     }
-    .wrap { height: 100%; width: 100%; }
-    svg { width: 100%; height: 100%; display: block; }
+
+    /* Give the SVG real height */
+    .wrap { width: 100%; height: 100vh; }
+
+    svg.markmap { width: 100%; height: 100%; display: block; }
 
     /* Force Markmap visuals for dark backgrounds */
-    text { fill: #ffffff !important; }
-    path { stroke: rgba(255,255,255,0.30) !important; }
+    svg.markmap text { fill: #ffffff !important; }
+    svg.markmap path { stroke: rgba(255,255,255,0.35) !important; }
   </style>
 </head>
+
 <body>
   <div class="wrap">
-    <svg id="mm"></svg>
+    <svg class="markmap"></svg>
   </div>
 
-  <script src="https://cdn.jsdelivr.net/npm/markmap-lib@0.15.4/dist/browser/view.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/markmap-lib@0.15.4/dist/browser/index.min.js"></script>
-
-  <script>
-    const markdown = `
+  <!-- Markdown payload -->
+  <script type="text/template">
 # Fellowship Intelligence
 
 ## Core Identity & Vision
@@ -97,15 +98,9 @@
 - Decision discipline
 - Risk awareness and explicit uncertainty
 - Non-advisory posture; the user remains the decision-maker
-`;
-
-    window.addEventListener('load', () => {
-      const { Markmap } = window.markmap;
-      Markmap.create('#mm', {
-        color: () => '#ffffff',
-        nodeFont: 'Inter, Arial, sans-serif'
-      }, markdown);
-    });
   </script>
+
+  <!-- Autoloader renders the <script type="text/template"> into the SVG -->
+  <script src="https://cdn.jsdelivr.net/npm/markmap-autoloader@0.15.4"></script>
 </body>
 </html>
