--- a/index.html
+++ b/index.html
@@ -12,95 +12,22 @@
       color: #fff;
       font-family: Inter, system-ui, -apple-system, Segoe UI, Roboto, Arial, sans-serif;
     }
-
-    /* Give the SVG real height */
     .wrap { width: 100%; height: 100vh; }
+    svg { width: 100%; height: 100%; display: block; }
 
-    svg.markmap { width: 100%; height: 100%; display: block; }
-
-    /* Force Markmap visuals for dark backgrounds */
-    svg.markmap text { fill: #ffffff !important; }
-    svg.markmap path { stroke: rgba(255,255,255,0.35) !important; }
+    /* Dark-theme overrides */
+    text { fill: #ffffff !important; }
+    path { stroke: rgba(255,255,255,0.35) !important; }
   </style>
 </head>
-
 <body>
   <div class="wrap">
-    <svg class="markmap"></svg>
+    <svg id="mm"></svg>
   </div>
 
-  <!-- Markdown payload -->
-  <script type="text/template">
-# Fellowship Intelligence
-
-## Core Identity & Vision
-- Purpose
-  - Enable clearer, more disciplined decision-making in complex business and market environments
-  - Support executives, operators, and builders with structured intelligence — not advice
-- Positioning
-  - Decision-support systems, not predictions or guarantees
-  - Intelligence over automation for its own sake
-- Philosophy
-  - Designed for the important decisions
-  - Calm, analytical, systems-oriented thinking
-  - Skeptical by default; clarity over confidence
-- Disclaimer
-  - All outputs are informational and contextual
-  - No fiduciary, advisory, or predictive claims
-
-## Product Ecosystem
-- Unified ecosystem with shared principles and capabilities
-- Each product addresses a different decision domain
-- Connected by a common reasoning layer
-
-## Fellowship Executive Intelligence
-- Purpose
-  - Support business owners and executives in managing complex organizations
-- Value Provided
-  - Structured executive-level insight
-  - Cross-functional clarity without operational noise
-- Disclaimer
-  - Business intelligence only; no legal, financial, or operational advice
-
-## Fellowship Market Intelligence
-- Purpose
-  - Help individuals understand markets with discipline and context
-- Value Provided
-  - Contextual awareness over reactive signal-chasing
-  - Insight into “what is happening,” not “what to do”
-- Disclaimer
-  - Not investment advice; no recommendations, forecasts, or guarantees
-
-## Fellowship Systems Lab
-- Purpose
-  - Design and build custom intelligence systems
-- Value Provided
-  - Translation of business logic into working systems
-  - Emphasis on clarity, safety, and maintainability
-- Disclaimer
-  - Systems design/development only; no delegated decision-making
-
-## Shared Capability: Focus
-- What it is
-  - Structured reasoning and synthesis layer across all products
-- What it does
-  - Organizes inputs into coherent context
-  - Surfaces trade-offs, constraints, and implications
-- What it is not
-  - Not a recommendation engine
-  - Not an autonomous decision-maker
-- Value prompt
-  - Better structure improves decision quality under uncertainty
-
-## How Fellowship Intelligence Thinks
-- Systems thinking
-- Context first
-- Decision discipline
-- Risk awareness and explicit uncertainty
-- Non-advisory posture; the user remains the decision-maker
-  </script>
-
-  <!-- Autoloader renders the <script type="text/template"> into the SVG -->
-  <script src="https://cdn.jsdelivr.net/npm/markmap-autoloader@0.15.4"></script>
+  <!-- External scripts only (no inline JS) -->
+  <script src="https://cdn.jsdelivr.net/npm/d3@7"></script>
+  <script src="https://cdn.jsdelivr.net/npm/markmap-lib@0.15.4/dist/browser/view.min.js"></script>
+  <script src="app.js"></script>
 </body>
 </html>
