--- a/index.html
+++ b/index.html
@@ -1,33 +1,9 @@
-<!doctype html>
-<html lang="en">
-<head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Fellowship Intelligence Mind Map</title>
-
-  <style>
-    html, body { height: 100%; margin: 0; }
-    body {
-      background: #0b0f14;
-      color: #fff;
-      font-family: Inter, system-ui, -apple-system, Segoe UI, Roboto, Arial, sans-serif;
-    }
-    .wrap { width: 100%; height: 100vh; }
-    svg { width: 100%; height: 100%; display: block; }
-
-    /* Dark-theme overrides */
-    text { fill: #ffffff !important; }
-    path { stroke: rgba(255,255,255,0.35) !important; }
-  </style>
-</head>
-<body>
-  <div class="wrap">
-    <svg id="mm"></svg>
-  </div>
-
-  <!-- External scripts only (no inline JS) -->
   <script src="https://cdn.jsdelivr.net/npm/d3@7"></script>
+
+  <!-- Markmap core + transformer -->
+  <script src="https://cdn.jsdelivr.net/npm/markmap-lib@0.15.4/dist/browser/index.min.js"></script>
+
+  <!-- Markmap renderer/view -->
   <script src="https://cdn.jsdelivr.net/npm/markmap-lib@0.15.4/dist/browser/view.min.js"></script>
+
   <script src="app.js"></script>
-</body>
-</html>
